# qr-code-reader-mcp

./: .gitignore  .semgrep.yml  CLAUDE.md  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
src/qr_code_reader/: __init__.py  qr_reader.py  server.py
tests/: test_init.py  test_integration.py  test_qr_reader.py  test_server.py
